# odgs-snowflake-bridge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/marketplace-demo/: .gitignore  README.md  build_and_enforce.py  jwks_server.py  mock_snowflake_source.py  run_seg3_snowflake.sh  seg3_snowflake_output.txt  sync_from_snowflake.py
examples/marketplace-demo/rows/: transactions_bad.json  transactions_ok.json
src/odgs_snowflake/: __init__.py  bridge.py  cli.py  client.py  transformer.py
tests/: test_cli.py  test_client.py  test_transformer.py
